<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Drizzle</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="degrees_fahrenheit">&#176;F</string>
    <string name="degrees_celsius">&#176;C</string>
    <string name="degrees">&#176;</string>
    <string name="units_imperial">imperial</string>
    <string name="percent">%</string>
    <string name="current">Current</string>
    <string name="forecast">Forecast</string>
    <string name="zip_hint">Enter zip code</string>
    <string name="get_gps_coords">Use current location</string>
    <string name="gps_icon">GPS icon</string>
    <string name="add_location_description">Add a location</string>
    <string name="temp_hi">High</string>
    <string name="temp_lo">Low</string>
    <string name="pressure">Pressure</string>
</resources>
